--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <html>
-  <p><a href="Tabela%20de%20Pre%C3%A7os%202022.pdf"></a></p>
+  <p><a href="Tabela%20de%20Pre%C3%A7os%202022.pdf">Click Here Event Info</a></p>
 </html>
-
